add top url bar

--- a/src/gui.html
+++ b/src/gui.html
@@ -11,10 +11,14 @@ conditions of the Hacking License (see licenses/HACK.txt)
 	<head>
 		<meta charset="UTF-8">
 		<title>Main Page</title>
+		<link rel="stylesheet" href="style.css">
 	</head>
 
 	<body>
-		<h1>GUI</h1>
+		<div id='bar'>
+			<input type='text' id='url-box'></input>
+			<div id='start-button'></div>
+		</div>
 	</body>
 
 
