--- a/src/gui.html
+++ b/src/gui.html
@@ -17,9 +17,8 @@ conditions of the Hacking License (see licenses/HACK.txt)
 	<body>
 		<div id='bar'>
 			<input type='text' id='url-box'></input>
-			<div id='start-button'></div>
+			<button id='start-button'>Inizia</button>
 		</div>
 	</body>
-
 
 </html>
