--- a/src/main.html
+++ b/src/main.html
@@ -1,3 +1,11 @@
+<!-- 
+This file is part of Minos
+
+Copyright (C) 2023 ebmaj7 <ebmaj7@proton.me>
+
+Minos is a hack. You can use it according to the terms and 
+conditions of the Hacking License (see licenses/HACK.txt)
+-->
 <!DOCTYPE html>
 <html lang="it">
 
