handle click on inizia

--- a/src/main.html
+++ b/src/main.html
@@ -18,10 +18,10 @@ conditions of the Hacking License (see licenses/HACK.txt)
 
 	<body>
 		<div class='top-bar hidden'>
-			<input type='text' id='url-box'></input >
+			<input type='text' id='url-box' placeholder="inserisci l'indirizzo"></input>
 			<button id='start-button'>Inizia</button>
 		</div>
-		<div class='center'>
+		<div class='main center'>
 			<h1 class='main-title'>Minos</h1>
 			<button class='button' id='verify-button'>Verifica sito web</button>
 		</div>
