add copyright info, disable url box after pressing start button

--- a/src/main.html
+++ b/src/main.html
@@ -18,7 +18,7 @@ conditions of the Hacking License (see licenses/HACK.txt)
 
 	<body>
 		<div class='top-bar hidden'>
-			<input type='text' id='url-box' placeholder="inserisci l'indirizzo"></input>
+			<input type='text' class='enabled' id='url-box' placeholder="inserisci l'indirizzo"></input>
 			<button id='start-button'>Inizia</button>
 		</div>
 		<div class='main center'>
