--- a/src/main.html
+++ b/src/main.html
@@ -17,13 +17,20 @@ conditions of the Hacking License (see licenses/HACK.txt)
 	</head>
 
 	<body>
+		<!-- top-bar -->
 		<div class='top-bar hidden'>
-			<input type='text' class='enabled' id='url-box' placeholder="inserisci l'indirizzo"></input>
-			<button id='start-button'>Inizia</button>
+			<input type='text' class='enabled box' id='url-box' placeholder="inserisci l'indirizzo"></input>
+			<button class='button' id='start-button'>Inizia</button>
 		</div>
+		<!-- main page -->
 		<div class='main center'>
 			<h1 class='main-title'>Minos</h1>
 			<button class='button' id='verify-button'>Verifica sito web</button>
+		</div>
+		<!-- report -->
+		<div id='report' class='main hidden center'>
+			<textarea rows='40' cols='50' class='report box'>Report</textarea>
+			<button class='button' id='claim-button'>Reclama al Garante</button>
 		</div>
 
 	</body>
