load report directly from memory (TODO: fix loading time, too slow for big reports)

--- a/src/main.html
+++ b/src/main.html
@@ -20,7 +20,7 @@ conditions of the Hacking License (see licenses/HACK.txt)
 		<!-- top-bar -->
 		<div class='top-bar hidden'>
 			<input type='text' class='enabled box' id='url-box' placeholder="inserisci l'indirizzo"></input>
-			<button class='button' id='start-button'>Inizia</button>
+			<button class='button' id='top-button'>Inizia</button>
 		</div>
 		<!-- main page -->
 		<div class='main center'>
@@ -29,7 +29,7 @@ conditions of the Hacking License (see licenses/HACK.txt)
 		</div>
 		<!-- report -->
 		<div id='report' class='main hidden center'>
-			<textarea rows='40' cols='50' class='report box'>Report</textarea>
+			<textarea rows='40' cols='50' class='report box' readonly placeholder='Report'></textarea>
 			<button class='button' id='claim-button'>Reclama al Garante</button>
 		</div>
 
