spawn file dialog on idcard button click

--- a/src/main.html
+++ b/src/main.html
@@ -43,8 +43,8 @@ conditions of the Hacking License (see licenses/HACK.txt)
 				<input type='text' class='form-input' id='input-surname' placeholder='surname'></input>
 			</div>
 			<div id='form-buttons'>
-				<button class='action button'>Carica documento d'identità (fronte/retro)</button>
-				<button class='action button'>Submit</button>
+				<button id='idcard' class='action button'>Carica documento d'identità (fronte/retro)</button>
+				<button id='submit' class='action button'>Submit</button>
 			</div>
 		</div>
 
