refactor css, html

--- a/src/main.html
+++ b/src/main.html
@@ -54,9 +54,8 @@ conditions of the Hacking License (see licenses/HACK.txt)
 				<input type='text' class='form-input' placeholder='Residenza'></input>
 			</div>
 			<div id='form-buttons' class='grid'>
-				<button id='next' class='button disabled' disabled>Avanti</button>
-<!-- 				<button id='idcard' class='button'>Carica documento d'identità (fronte/retro)</button> -->
-<!-- 				<button id='submit' class='button'>Submit</button> -->
+				<button id='button-prev' class='button disabled hidden' disabled>Indietro</button >
+				<button id='button-next' class='button disabled' disabled>Avanti</button>
 			</div>
 		</div>
 	</body>
