remove useless css rules, disable top-button at start

--- a/src/main.html
+++ b/src/main.html
@@ -20,7 +20,7 @@ conditions of the Hacking License (see licenses/HACK.txt)
 		<!-- top-bar -->
 		<div id='top-bar' class='hidden grid'>
 			<input type='text' class='enabled box' id='url-box' placeholder="inserisci l'indirizzo"></input>
-			<button class='button' id='top-button'>Inizia</button>
+			<button class='button disabled' id='top-button'>Inizia</button>
 		</div>
 		<!-- main page -->
 		<div id='main' class='center grid'>
