remove useless verify event, define tooltip for disabled buttons

--- a/src/main.html
+++ b/src/main.html
@@ -20,7 +20,10 @@ conditions of the Hacking License (see licenses/HACK.txt)
 		<!-- top-bar -->
 		<div id='top-bar' class='hidden grid'>
 			<input type='text' class='enabled box' id='url-box' placeholder="inserisci l'indirizzo"></input>
-			<button class='button disabled' id='top-button'>Inizia</button>
+			<button class='button disabled' id='top-button'>
+				Inizia
+				<div class='tooltip hidden'>Inserisci un'URL per cominciare</div>
+			</button>
 		</div>
 		<!-- main page -->
 		<div id='main' class='center grid'>
@@ -54,8 +57,12 @@ conditions of the Hacking License (see licenses/HACK.txt)
 				<input type='text' class='form-input' placeholder='Residenza'></input>
 			</div>
 			<div id='form-buttons' class='grid'>
-				<button id='button-prev' class='button disabled hidden' disabled>Indietro</button >
-				<button id='button-next' class='button disabled' disabled>Avanti</button>
+				<button id='button-prev' class='button disabled hidden' disabled>
+					Indietro
+				</button>
+				<button id='button-next' class='button disabled' disabled>
+					Avanti
+				</button>
 			</div>
 		</div>
 	</body>
