add tooltip on disabled button, crop browser views when window gets resized

--- a/src/main.html
+++ b/src/main.html
@@ -22,7 +22,7 @@ conditions of the Hacking License (see licenses/HACK.txt)
 			<input type='text' class='enabled box' id='url-box' placeholder="inserisci l'indirizzo"></input>
 			<button class='button disabled' id='top-button'>
 				Inizia
-				<div class='tooltip hidden'>Inserisci un'URL per cominciare</div>
+				<div class='tooltip hidden' id='top-tooltip'>Inserisci un URL per proseguire</div>
 			</button>
 		</div>
 		<!-- main page -->
