--- a/src/main.html
+++ b/src/main.html
@@ -32,6 +32,7 @@ conditions of the Hacking License (see licenses/HACK.txt)
 		</div>
 		<!-- report -->
 		<div id='report-container' class='hidden center grid'>
+			<div class='label' id='report-label'>Durante la navigazione sono stati individuati trasferimenti illeciti verso questi hosts:</div>
 			<textarea rows='40' cols='50' id='report' class='box' autocomplete="off" autocapitalize="off" spellcheck="false" readonly placeholder='Report'></textarea>
 			<button class='button' id='claim-button'>Reclama al Garante</button>
 		</div>
