--- a/src/main.html
+++ b/src/main.html
@@ -20,9 +20,8 @@ conditions of the Hacking License (see licenses/HACK.txt)
 		<!-- top-bar -->
 		<div id='top-bar' class='hidden grid'>
 			<input type='text' class='enabled box' id='url-box' placeholder="inserisci l'indirizzo"></input>
-			<button class='button disabled' id='top-button'>
+			<button class='button disabled' id='top-button' tooltip='Inserisci un URL per proseguire'>
 				Inizia
-				<div class='tooltip hidden' id='top-tooltip'>Inserisci un URL per proseguire</div>
 			</button>
 		</div>
 		<!-- main page -->
