remove useless disabled property on form buttons

--- a/src/main.html
+++ b/src/main.html
@@ -57,10 +57,10 @@ conditions of the Hacking License (see licenses/HACK.txt)
 				<input type='text' class='form-input' placeholder='Residenza'></input>
 			</div>
 			<div id='form-buttons' class='grid'>
-				<button id='button-prev' class='button disabled hidden' disabled>
+				<button id='button-prev' class='button disabled hidden'>
 					Indietro
 				</button>
-				<button id='button-next' class='button disabled' disabled>
+				<button id='button-next' class='button disabled' tooltip='completa il form con i dati mancanti'>
 					Avanti
 				</button>
 			</div>
