add form validation

--- a/src/main.html
+++ b/src/main.html
@@ -44,17 +44,17 @@ conditions of the Hacking License (see licenses/HACK.txt)
 			</div>
 			<div id='form-fields' class='grid'>
 				<label class='label'>Nome</label>
-				<input type='text' class='form-input' placeholder='Nome'></input>
+				<input id='form-name' type='text' class='form-input' placeholder='Nome' required invalid></input>
 				<label class='label'>Cognome</label>
-				<input type='text' class='form-input' placeholder='Cognome'></input>
+				<input id='form-surname' type='text' class='form-input' placeholder='Cognome'></input>
 				<label class='label'>Data di nascita</label>
-				<input type='text' class='form-input' placeholder='Data di nascita'></input>
+				<input id='form-birthdate' type='text' class='form-input' placeholder='GG/MM/AAAA'></input>
 				<label class='label'>Luogo di nascita</label>
-				<input type='text' class='form-input' placeholder='Luogo di nascita'></input>
+				<input id='form-birthplace' type='text' class='form-input' placeholder='Luogo di nascita'></input>
 				<label class='label'>Codice Fiscale</label>
-				<input type='text' class='form-input' placeholder='Codice Fiscale'></input>
+				<input id='form-fisccode' type='text' class='form-input' placeholder='Codice Fiscale'></input>
 				<label class='label'>Residenza</label>
-				<input type='text' class='form-input' placeholder='Residenza'></input>
+				<input id='form-address' type='text' class='form-input' placeholder='Residenza'></input>
 			</div>
 			<div id='form-buttons' class='grid'>
 				<button id='button-prev' class='button disabled hidden'>
