--- a/src/main.html
+++ b/src/main.html
@@ -13,7 +13,7 @@ conditions of the Hacking License (see licenses/HACK.txt)
 		<meta charset="UTF-8">
 		<title>Main</title>
 		<link rel="stylesheet" href="style.css">
-		<script src='renderer.js' defer></script>
+		<script type='module' src='renderer.js' defer></script>
 	</head>
 
 	<body>
