--- a/src/main.html
+++ b/src/main.html
@@ -90,6 +90,20 @@ conditions of the Hacking License (see licenses/HACK.txt)
 					<input id='form-fax' type='text' class='form-input' placeholder='Fax'></input>
 				</div>
 			</div>
+			<div id='form-fields-3' class='grid hidden'>
+				<span>
+					<input type='checkbox' id='check-decl-1'>
+					<label id='form-decl-1'></label>
+				</span>
+				<span>
+					<input type='checkbox' id='check-decl-2'>
+					<label id='form-decl-2'></label>
+				</span>
+				<span>
+					<input type='checkbox' id='check-decl-3'>
+					<label id='form-decl-3'></label>
+				</span>
+			</div>
 			<div id='form-buttons' class='grid'>
 				<button id='button-prev' class='button disabled hidden'></button>
 				<button id='button-next' class='button disabled'></button>
