start setting up page4

--- a/src/main.html
+++ b/src/main.html
@@ -93,15 +93,29 @@ conditions of the Hacking License (see licenses/HACK.txt)
 			<div id='form-fields-3' class='grid hidden'>
 				<span>
 					<input type='checkbox' id='check-decl-1'>
-					<label id='form-decl-1'></label>
+					<label id='form-decl-1-label'></label>
 				</span>
 				<span>
 					<input type='checkbox' id='check-decl-2'>
-					<label id='form-decl-2'></label>
+					<label id='form-decl-2-label'></label>
 				</span>
 				<span>
 					<input type='checkbox' id='check-decl-3'>
-					<label id='form-decl-3'></label>
+					<label id='form-decl-3-label'></label>
+				</span>
+			</div>
+			<div id='form-fields-4' class='grid hidden'>
+				<span>
+					<input type='radio' id='radio-sign-1' checked>
+					<label id='form-sign-1-label'></label>
+				</span>
+				<span>
+					<input type='radio' id='radio-sign-2' checked>
+					<label id='form-sign-2-label'></label>
+				</span>
+				<span id='form-sign-photo-buttons'>
+					<button id='sign-button'></button>
+					<button id='idphoto-button'></button>
 				</span>
 			</div>
 			<div id='form-buttons' class='grid'>
