disable signature photo button when digital signature is selected

--- a/src/main.html
+++ b/src/main.html
@@ -110,12 +110,12 @@ conditions of the Hacking License (see licenses/HACK.txt)
 					<label id='form-sign-1-label'></label>
 				</span>
 				<span>
-					<input type='radio' id='radio-sign-2' checked>
+					<input type='radio' id='radio-sign-2'>
 					<label id='form-sign-2-label'></label>
 				</span>
 				<span id='form-sign-photo-buttons'>
-					<button id='sign-button'></button>
-					<button id='idphoto-button'></button>
+					<button id='sign-button' class='button'></button>
+					<button id='idphoto-button' class='button'></button>
 				</span>
 			</div>
 			<div id='form-buttons' class='grid'>
