display grid sign and photo buttons

--- a/src/main.html
+++ b/src/main.html
@@ -113,10 +113,10 @@ conditions of the Hacking License (see licenses/HACK.txt)
 					<input type='radio' id='radio-sign-2'>
 					<label id='form-sign-2-label'></label>
 				</span>
-				<span id='form-sign-photo-buttons'>
+				<div id='form-sign-photo-buttons' class='grid'>
 					<button id='sign-button' class='button'></button>
 					<button id='idphoto-button' class='button'></button>
-				</span>
+				</div>
 			</div>
 			<div id='form-buttons' class='grid'>
 				<button id='button-prev' class='button disabled hidden'></button>
