show sign and idphoto buttons within container

--- a/src/main.html
+++ b/src/main.html
@@ -113,9 +113,13 @@ conditions of the Hacking License (see licenses/HACK.txt)
 					<input type='radio' id='radio-sign-2'>
 					<label id='form-sign-2-label'></label>
 				</span>
-				<div id='form-sign-photo-buttons' class='grid'>
+				<div id='sign-button-container' class='upload-button-container grid'>
 					<button id='sign-button' class='button'></button>
+					<p id='sign-label' class='upload-label'>nessun file selezionato</p>
+				</div>
+				<div id='idphoto-button-container' class='upload-button-container grid'>
 					<button id='idphoto-button' class='button'></button>
+					<p id='idphoto-label' class='upload-label'>nessun file selezionato</p>
 				</div>
 			</div>
 			<div id='form-buttons' class='grid'>
