--- a/src/main.html
+++ b/src/main.html
@@ -115,11 +115,11 @@ conditions of the Hacking License (see licenses/HACK.txt)
 				</span>
 				<div id='sign-button-container' class='upload-button-container grid'>
 					<button id='sign-button' class='button'></button>
-					<p id='sign-label' class='upload-label'>nessun file selezionato</p>
+					<p id='sign-label' class='upload-label'></p>
 				</div>
 				<div id='idphoto-button-container' class='upload-button-container grid'>
 					<button id='idphoto-button' class='button'></button>
-					<p id='idphoto-label' class='upload-label'>nessun file selezionato</p>
+					<p id='idphoto-label' class='upload-label'></p>
 				</div>
 			</div>
 			<div id='form-buttons' class='grid'>
