add data controller and data responsible fields

--- a/src/main.html
+++ b/src/main.html
@@ -40,6 +40,7 @@ conditions of the Hacking License (see licenses/HACK.txt)
 				<span id='form-label'></span>
 				<hr></hr>
 			</div>
+			<!-- form page 1 -->
 			<div id='form-fields-1' class='grid'>
 				<label id='form-name-label' class='label'></label>
 				<input id='form-name' type='text' class='form-input' placeholder='Nome'></input>
@@ -54,6 +55,7 @@ conditions of the Hacking License (see licenses/HACK.txt)
 				<label id='form-address-label' class='label'></label>
 				<input id='form-address' type='text' class='form-input' placeholder='Residenza'></input>
 			</div>
+			<!-- form page 2 -->
 			<div id='form-fields-2' class='grid hidden'>
 				<span id='form-checkboxes' class='grid'>
 					<span>
@@ -90,6 +92,7 @@ conditions of the Hacking License (see licenses/HACK.txt)
 					<input id='form-fax' type='text' class='form-input' placeholder='Fax'></input>
 				</div>
 			</div>
+			<!-- form page 3 -->
 			<div id='form-fields-3' class='grid hidden'>
 				<span>
 					<input type='checkbox' id='check-decl-1'>
@@ -103,7 +106,18 @@ conditions of the Hacking License (see licenses/HACK.txt)
 					<input type='checkbox' id='check-decl-3'>
 					<label id='form-decl-3-label'></label>
 				</span>
+				<div class='grid' id='data-controller-responsible'>
+					<div class='grid' id='data-controller-container'>
+						<label id='form-data-controller-label' class='label'></label>
+						<input id='form-data-controller' type='text' class='form-input' placeholder='Titolare del trattamento'></input>
+					</div>
+					<div class='grid' id='data-responsible-container'>
+						<label id='form-data-responsible-label' class='label'></label>
+						<input id='form-data-responsible' type='text' class='form-input' placeholder='Responsabile del trattamento'></input>
+					</div>
+				</div>
 			</div>
+			<!-- form page 4 -->
 			<div id='form-fields-4' class='grid hidden'>
 				<span>
 					<input type='radio' id='radio-sign-1' checked>
