--- a/src/main.html
+++ b/src/main.html
@@ -110,10 +110,12 @@ conditions of the Hacking License (see licenses/HACK.txt)
 					<div class='grid' id='data-controller-container'>
 						<label id='form-data-controller-label' class='label'></label>
 						<input id='form-data-controller' type='text' class='form-input' placeholder='Titolare del trattamento'></input>
+						<div id='form-data-controller-infobox' class='infobox hidden'></div>
 					</div>
 					<div class='grid' id='data-responsible-container'>
 						<label id='form-data-responsible-label' class='label'></label>
 						<input id='form-data-responsible' type='text' class='form-input' placeholder='Responsabile del trattamento'></input>
+						<div id='form-data-responsible-infobox' class='infobox hidden'></div>
 					</div>
 				</div>
 			</div>
