add info badges near data controller and responsible

--- a/src/main.html
+++ b/src/main.html
@@ -108,14 +108,24 @@ conditions of the Hacking License (see licenses/HACK.txt)
 				</span>
 				<div class='grid' id='data-controller-responsible'>
 					<div class='grid' id='data-controller-container'>
-						<label id='form-data-controller-label' class='label'></label>
+						<div class='infobadge-container'>
+							<label id='form-data-controller-label' class='label'></label>
+							<div id='form-data-controller-infobadge' class='infobadge'>
+								info
+								<div id='form-data-controller-infobox' class='infobox hidden'></div>
+							</div>
+						</div>
 						<input id='form-data-controller' type='text' class='form-input' placeholder='Titolare del trattamento'></input>
-						<div id='form-data-controller-infobox' class='infobox hidden'></div>
 					</div>
 					<div class='grid' id='data-responsible-container'>
-						<label id='form-data-responsible-label' class='label'></label>
+						<div class='infobadge-container'>
+							<label id='form-data-responsible-label' class='label'></label>
+							<div id='form-data-responsible-infobadge' class='infobadge'>
+								info
+								<div id='form-data-responsible-infobox' class='infobox hidden'></div>
+							</div>
+						</div>
 						<input id='form-data-responsible' type='text' class='form-input' placeholder='Responsabile del trattamento'></input>
-						<div id='form-data-responsible-infobox' class='infobox hidden'></div>
 					</div>
 				</div>
 			</div>
