add comment to identify next and prev buttons

--- a/src/main.html
+++ b/src/main.html
@@ -148,6 +148,7 @@ conditions of the Hacking License (see licenses/HACK.txt)
 					<p id='idphoto-label' class='upload-label'></p>
 				</div>
 			</div>
+			<!-- form buttons (prev, next) -->
 			<div id='form-buttons' class='grid'>
 				<button id='button-prev' class='button disabled hidden'></button>
 				<button id='button-next' class='button disabled'></button>
