show message page when claim is exported

--- a/src/main.html
+++ b/src/main.html
@@ -154,6 +154,10 @@ conditions of the Hacking License (see licenses/HACK.txt)
 				<button id='button-next' class='button disabled'></button>
 			</div>
 		</div>
+		<!-- message display -->
+		<div id='message-container' class='hidden center'>
+			<div id='message'></div>
+		</div>
 	</body>
 	
 </html>
