add loading spinner while page is not loaded

--- a/src/main.html
+++ b/src/main.html
@@ -22,6 +22,8 @@ conditions of the Hacking License (see licenses/HACK.txt)
 			<input type='text' class='enabled box' id='url-box' placeholder="inserisci l'indirizzo"></input>
 			<button class='button disabled' id='top-button'></button>
 		</div>
+		<!-- spinner -->
+		<div id='spinner' class='center hidden'></div>
 		<!-- main page -->
 		<div id='main' class='center grid'>
 			<h1 id='main-title'></h1>
